<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Create_GPA_Plan_Activity"
    >

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="262dp"
        android:text="Create GPA planner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GradeYouWant" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="169dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="19dp"
        android:text="How many grade types in this course?"
        android:textColor="#191818"
        android:textColorHint="#171616"
        app:layout_constraintBottom_toTopOf="@+id/numGrade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wanted_grade"
        android:layout_width="219dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="38dp"
        android:hint="@string/how_much_grade"
        android:text="@string/how_much_grade_you_want"
        android:textColor="#171717"
        app:layout_constraintBottom_toTopOf="@+id/GradeYouWant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numGrade" />

    <EditText
        android:id="@+id/numGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="Number of grade types"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:background="@drawable/rectangle_layout"
        app:layout_constraintBottom_toTopOf="@+id/wanted_grade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/GradeYouWant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="Grade you want to get"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:background="@drawable/rectangle_layout"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wanted_grade"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/quot_quot"
        android:textColor="#101010"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/courseGrades"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>